--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
@@ -396,16 +396,16 @@
                             <option value="*">All</option>
                             [% FOREACH itemtypeloo IN itemtypeloop %]
                                 [% NEXT IF itemtypeloo.parent_type %]
-                                [% SET children = itemtypeloo.children_with_localization %]
+                                [% SET children = itemtypeloo.children %]
                                 [% IF children.count %]
-                                    <optgroup label="[% itemtypeloo.translated_description | html %]">
-                                        <option value="[% itemtypeloo.itemtype | html %]">[% itemtypeloo.translated_description | html %] (All)</option>
+                                    <optgroup label="[% ItemTypes.t(itemtypeloo.description) | html %]">
+                                        <option value="[% itemtypeloo.itemtype | html %]">[% ItemTypes.t(itemtypeloo.description) | html %] (All)</option>
                                         [% FOREACH child IN children %]
-                                            <option value="[% child.itemtype | html %]">[% child.translated_description | html %]</option>
+                                            <option value="[% child.itemtype | html %]">[% ItemTypes.t(child.description) | html %]</option>
                                         [% END %]
                                     </optgroup>
                                 [% ELSE %]
-                                    <option value="[% itemtypeloo.itemtype | html %]">[% itemtypeloo.translated_description | html %]</option>
+                                    <option value="[% itemtypeloo.itemtype | html %]">[% ItemTypes.t(itemtypeloo.description) | html %]</option>
                                 [% END %]
                             [% END %]
                         </select>
@@ -1094,7 +1094,7 @@
                     [% IF holdallowed || hold_fulfillment_policy || returnbranch %]
                         <tr>
                             <td>
-                                [% i.translated_description | html %]
+                                [% ItemTypes.t(i.description) | html %]
                             </td>
                             <td>
                                 [% IF holdallowed == 'from_any_library' %]
@@ -1139,7 +1139,7 @@
                     <td>
                         <select name="itemtype">
                         [% FOREACH itemtypeloo IN itemtypeloop %]
-                            <option value="[% itemtypeloo.itemtype | html %]">[% itemtypeloo.translated_description | html %]</option>
+                            <option value="[% itemtypeloo.itemtype | html %]">[% ItemTypes.t(itemtypeloo.description) | html %]</option>
                         [% END %]
                         </select>
                     </td>
