--- a/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/batch_add_items.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/batch_add_items.tt
@@ -56,7 +56,7 @@
                                 <option value=""></option>
 
                                 [% FOREACH it IN ItemTypes.Get() %]
-                                    <option value="[% it.itemtype | html %]">[% it.description | html %]</option>
+                                    <option value="[% it.itemtype | html %]">[% ItemTypes.t(it.description) | html %]</option>
                                 [% END %]
                             </select>
                         </li>
