--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tt
@@ -1,4 +1,5 @@
 [% USE Branches %]
+[% USE ItemTypes %]
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Items with no checkouts &rsaquo; Reports &rsaquo; Koha</title>
 [% INCLUDE 'doc-head-close.inc' %]
@@ -112,7 +113,7 @@
         <label for="documenttype">Item type: </label><select name="Filter" id="documenttype">
         <option value="">Any item type</option>
     [% FOREACH itemtype IN itemtypes %]
-        <option value="[% itemtype.itemtype | html %]">[% itemtype.translated_description | html %]</option>
+        <option value="[% itemtype.itemtype | html %]">[% ItemTypes.t(itemtype.description) | html %]</option>
      [% END %] 
     </select>
     </li>
