--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/issues_avg_stats.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/issues_avg_stats.tt
@@ -1,4 +1,5 @@
 [% USE Branches %]
+[% USE ItemTypes %]
 [% SET footerjs = 1 %]
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Average loan time &rsaquo; Reports &rsaquo; Koha</title>
@@ -170,7 +171,7 @@
                     <select name="Filter" id="itemtypes">
                         <option value=""></option>
                         [% FOREACH itemtype IN itemtypes %]
-                        <option value="[%- itemtype.itemtype | html -%]">[%- itemtype.translated_description | html -%]</option>
+                        <option value="[%- itemtype.itemtype | html -%]">[%- ItemTypes.t(itemtype.description) | html -%]</option>
                         [% END %]
                     </select>
                 </td>
