--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-bib-search.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-bib-search.tt
@@ -1,3 +1,4 @@
+[% USE ItemTypes %]
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Catalog search &rsaquo; Serials &rsaquo; Koha</title>
 [% INCLUDE 'doc-head-close.inc' %]
@@ -25,7 +26,7 @@
                 <option value="">All</option>
                 [%- FOREACH itemtypeloo IN itemtypeloop %]
                 <option value="[% itemtypeloo.code | html %]">
-                    [% itemtypeloo.description | html %]
+                    [% ItemTypes.t(itemtypeloo.description) | html %]
                 </option>
                 [%- END %]
             </select>
