Bug 24975: Keep the translations, prevent duplicates, and other fixes
Translations are no longer lost when you change an itemtype's
description, thanks to a new `l10n_source.key` column which must be
unique within it's "text group" ('itemtype' is a text group)
This also prevent duplicate entries in l10n_source

Columns were renamed to better match their purpose:
* context -> group
* source -> text

Use Koha::Cache::Memory::Lite if other caching systems are not available

Prepend 'l10n:' to the cache key to avoid conflicts

Test plan:
1. DROP TABLE IF EXISTS l10n_target, l10n_source
2. Follow the test plan from previous patch

Signed-off-by: Martin Renvoize <martin.renvoize@ptfs-europe.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/localization.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/localization.tt
@@ -45,8 +45,8 @@
                     <table id="localization">
                         <thead>
                             <tr>
-                                <th>Context</th>
-                                <th>Source</th>
+                                <th>Group</th>
+                                <th>Text</th>
                                 <th>Translations</th>
                             </tr>
                         </thead>
@@ -89,12 +89,12 @@
                 },
                 columns: [
                     {
-                        name: 'context',
-                        data: 'context',
+                        name: 'group',
+                        data: 'group',
                     },
                     {
-                        name: 'source',
-                        data: 'source',
+                        name: 'text',
+                        data: 'text',
                     },
                     {
                         name: 'targets',
@@ -120,7 +120,6 @@
                                 translateLink.attr('href', '#');
                                 translateLink.attr('data-l10n-source-id', row.l10n_source_id);
                                 translateLink.attr('data-language', language.rfc4646_subtag);
-                                translateLink.attr('data-source', row.source);
                                 if (translations[language.rfc4646_subtag]) {
                                     translateLink.attr('data-translation', translations[language.rfc4646_subtag].translation);
                                 }
