--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-illrequests.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-illrequests.tt
@@ -239,8 +239,8 @@
                                 [% custom_values = whole.custom_value.split('\0') %]
                                 [% i = 0 %]
                                 [% FOREACH custom_key IN custom_keys %]
-                                    <input type="hidden" name="custom_key" value="[% custom_key %]">
-                                    <input type="hidden" name="custom_value" value="[% custom_values.$i %]">
+                                    <input type="hidden" name="custom_key" value="[% custom_key | html %]">
+                                    <input type="hidden" name="custom_value" value="[% custom_values.$i | html %]">
                                 [% i = i + 1 %]
                                 [% END %]
                                 <input type="hidden" name="checked_availability" value="1">
@@ -251,7 +251,7 @@
                                 </div>
                             </form>
                             [% FOR service IN services %]
-                                <h4 class="ill_availability_sourcename">[% service.name %]</h4>
+                                <h4 class="ill_availability_sourcename">[% service.name | html %]</h4>
                                 [% INCLUDE 'ill-availability-table.inc' service=service %]
                             [% END %]
                         </div>
